Corrected input placeholder color (mainly for IE). Fixed date input for initial values. Money input: added property to disallow negative value. Money input: better handling of non-numeric chars. Disabled calculate button when pension capital amount is set too low.

--- a/aegon-sass-library/components/_quickquote-dip.scss
+++ b/aegon-sass-library/components/_quickquote-dip.scss
@@ -20,6 +20,11 @@
     color: $black;
   }
 
+  input[type=text]::placeholder,
+  input[type=number]::placeholder {
+    color: $slightly_darker_grey;
+  }
+
   label.checkbox {
     padding-left: 45px;
 
